# duck-coin

./: .gitignore  .pre-commit-config.yaml  PRESALE_OVERVIEW.md  docker-compose.yaml  requirements.in  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-entrypoint.sh  requirements.in  requirements.txt
backend/app/: main.py
backend/app/api/: health.py  presale.py  presale_router.py
backend/app/blockchain/: __init__.py  base.py  registry.py
backend/app/core/: config.py  constants.py  utils.py
backend/app/models/: blockchain.py  presale.py
backend/app/schemas/: presale.py
backend/app/services/: nowpayments.py  solana.py
backend/app/workers/: daily_config.py  tokenomics.py
backend/atlas/: atlas.hcl  schema.sql
backend/atlas/migrations/: 20240125000000_initial.sql  20260128201930_initial.sql  20260215122037_init.sql  20260225181500_add_auth_messages.sql  atlas.sum  (+2 more)
scripts/: deploy.py  init_vault.ts  mint_to_vault.ts  set_unlock.py  test_presale.ts  tsconfig.json
scripts/tests/: allocation.ts  claiming.ts  config-management.ts  config.ts  evm-flow.ts  full-flow.ts  setup.ts
smart_contracts/: Anchor.toml
smart_contracts/programs/presale/: Cargo.toml  README.md
smart_contracts/programs/presale/src/: constants.rs  errors.rs  lib.rs
smart_contracts/programs/presale/src/instructions/: bind_claim_wallet.rs  buy_sol.rs  buy_spl.rs  claim.rs  credit_allocation.rs  initialize.rs  mod.rs  set_status.rs  set_unlock.rs  update_config.rs  utils.rs
smart_contracts/programs/presale/src/state/: mod.rs
(+9 files in other folders)
