[package]
name = "presale"
version = "0.1.0"
description = "Token presale program with multi-currency payments, vesting, and ed25519 signature verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.18"
pyth-sdk-solana = "0.10.0"
